--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -11,7 +11,7 @@
     <%= product.category.name %>
   </td>
   <td>
-    <%= product.price %>
+    <span>$</span><%= product.price %>
   </td>
   <td>
     <%= product.quantity %>
