--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,13 +1,19 @@
-<section class="orders-show">
+<div class="container">
+  <h1 class="mb-4">Order Details</h1>
 
-  <header class="page-header">
-    <h1>Order #<%= @order.id %></h1>
-  </header>
+  <% @order.line_items.each do |line_item| %>
+    <%= render 'orders/line_item', line_item: line_item %>
+  <% end %>
 
-  <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+  <div class="row">
+    <div class="col-md-6 offset-md-6">
+      <h3 class="text-right">Final amount: <span>$</span><%= @order.total_cents.to_f / 100 %></h3>
+    </div>
   </div>
 
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
-
-</section>
+  <div class="row">
+    <div class="col-md-6">
+      <h4>Email: <%= @order.email %></h4>
+    </div>
+  </div>
+</div>
