--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,14 +6,9 @@
   <% end %>
 
   <div class="row">
-    <div class="col-md-6 offset-md-6">
-      <h3 class="text-right">Final amount: <span>$</span><%= @order.total_cents.to_f / 100 %></h3>
+    <div class="d-flex justify-content-between">
+      <h3>Email: <%= @order.email %></h4>
+      <span><h3 class="text-right">Final amount: <span>$</span><%= @order.total_cents.to_f / 100 %></h3>
+      </span>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-6">
-      <h4>Email: <%= @order.email %></h4>
-    </div>
-  </div>
-</div>
