added two cards with links to product and catagorie to admin dashboard

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,4 +1,22 @@
-<div>
 <h1>Admin Dashboard</h1>
+
+<div class="row">
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Total Products</h5>
+        <p class="card-text"><%= @product_count %></p>
+        <%= link_to 'View Products', admin_products_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Total Categories</h5>
+        <p class="card-text"><%= @category_count %></p>
+        <%= link_to 'View Categories', admin_root_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
 </div>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
