--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -40,7 +40,11 @@
             </li>
             <% end %>
           <%# </ul>
+          
         </li> %>
+        <li class="nav-link">
+          <%= link_to 'About Us', about_path %>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
