--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -15,7 +15,7 @@
       <div class="card-body">
         <h5 class="card-title">Total Categories</h5>
         <p class="card-text"><%= @category_count %></p>
-        <%= link_to 'View Categories', admin_root_path, class: 'btn btn-primary' %>
+        <%= link_to 'View Categories', admin_categories_path, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
